--- a/src/components/Editor.scss
+++ b/src/components/Editor.scss
@@ -10,21 +10,30 @@
   font-size: 30px;
 }
 
-.intestation-first{
+.intestation-1{
   color: #111;
   font-size: 35px;
 }
 
-.intestation-second{
+.intestation-2{
   color: #444;
   font-size: 27px;
 }
 
-.intestation-third{
+.intestation-3{
   color: #555;
   font-size: 23px;
 }
 
+.plain-text{
+  color: #000;
+  font-size: 15px;
+}
+
 .editor{
   color: #222;
+  height: 100%;
+  margin: 20px 10px 20px 0px;
+  padding: 10px 20px 10px 20px; 
+  background-color: $light;
 }
