--- a/src/components/Editor.scss
+++ b/src/components/Editor.scss
@@ -33,7 +33,7 @@
 .editor{
   color: #222;
   height: 100%;
-  margin: 20px 10px 20px 0px;
-  padding: 10px 20px 10px 20px; 
+  margin: 10px 20px 10px 20px;
+  padding: 20px; 
   background-color: $light;
 }
